package cl.ucn.disc.poo.fuentemanga.Clases;
/**
 * Enumeración que representa los roles de los usuarios en el sistema.
 */
public enum Rol {
    // Rol de administrador
    ADMINISTRADOR,
    // Rol de usuario normal
    USUARIO
}
